--- a/home.html
+++ b/home.html
@@ -153,13 +153,13 @@
     <!-- إعلانات سياحية متغيرة -->
     <div id="ad-slider" class="container my-4">
       <div class="ad-slide fade active">
-        <img src="ad1.jpg" alt="إعلان 1">
+        <img src="ad1.png" alt="إعلان 1">
       </div>
       <div class="ad-slide fade">
-        <img src="ad2.jpg" alt="إعلان 2">
+        <img src="ad2.png" alt="إعلان 2">
       </div>
       <div class="ad-slide fade">
-        <img src="ad3.jpg" alt="إعلان 3">
+        <img src="ad3.png" alt="إعلان 3">
       </div>
     </div>
 
