--- a/home.html
+++ b/home.html
@@ -164,7 +164,85 @@
         </div>
       </div>
     </div>
+<!-- ساعات عالمية -->
+<div class="container my-5">
+  <div class="row text-center g-4">
+    <div class="col-4">
+      <div class="clock-circle" id="clock-ny"></div>
+      <div class="city-label">نيويورك</div>
+    </div>
+    <div class="col-4">
+      <div class="clock-circle" id="clock-london"></div>
+      <div class="city-label">لندن</div>
+    </div>
+    <div class="col-4">
+      <div class="clock-circle" id="clock-tokyo"></div>
+      <div class="city-label">طوكيو</div>
+    </div>
+    <div class="col-4">
+      <div class="clock-circle" id="clock-dubai"></div>
+      <div class="city-label">دبي</div>
+    </div>
+    <div class="col-4">
+      <div class="clock-circle" id="clock-paris"></div>
+      <div class="city-label">باريس</div>
+    </div>
+    <div class="col-4">
+      <div class="clock-circle" id="clock-sydney"></div>
+      <div class="city-label">سيدني</div>
+    </div>
+  </div>
+</div>
 
+<style>
+  .clock-circle {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    border: 4px solid #aaa;
+    border-radius: 50%;
+    background: #fff;
+    color: #000;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: monospace;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+  }
+
+  .city-label {
+    margin-top: 10px;
+    font-size: 15px;
+    color: #ccc;
+  }
+</style>
+
+<script>
+  const clocks = [
+    { id: 'clock-ny', zone: 'America/New_York' },
+    { id: 'clock-london', zone: 'Europe/London' },
+    { id: 'clock-tokyo', zone: 'Asia/Tokyo' },
+    { id: 'clock-dubai', zone: 'Asia/Dubai' },
+    { id: 'clock-paris', zone: 'Europe/Paris' },
+    { id: 'clock-sydney', zone: 'Australia/Sydney' }
+  ];
+
+  function updateClocks() {
+    clocks.forEach(clock => {
+      const time = new Date().toLocaleTimeString('en-US', {
+        hour: '2-digit',
+        minute: '2-digit',
+        hour12: false,
+        timeZone: clock.zone
+      });
+      document.getElementById(clock.id).textContent = time;
+    });
+  }
+
+  updateClocks();
+  setInterval(updateClocks, 60000);
+</script>
     <!-- الوجهات -->
     <div class="container destinations">
       <div class="row g-3">
