--- a/home.html
+++ b/home.html
@@ -164,152 +164,84 @@
         </div>
       </div>
     </div>
-<!-- ساعات عقارب حقيقية -->
+<!-- ساعات عالمية -->
 <div class="container my-5">
   <div class="row text-center g-4">
     <div class="col-4">
-      <div class="analog-clock" data-zone="America/New_York"></div>
+      <div class="clock-circle" id="clock-ny"></div>
       <div class="city-label">نيويورك</div>
     </div>
     <div class="col-4">
-      <div class="analog-clock" data-zone="Europe/London"></div>
+      <div class="clock-circle" id="clock-london"></div>
       <div class="city-label">لندن</div>
     </div>
     <div class="col-4">
-      <div class="analog-clock" data-zone="Asia/Tokyo"></div>
+      <div class="clock-circle" id="clock-tokyo"></div>
       <div class="city-label">طوكيو</div>
     </div>
     <div class="col-4">
-      <div class="analog-clock" data-zone="Asia/Riyadh"></div>
-      <div class="city-label">الرياض</div>
+      <div class="clock-circle" id="clock-dubai"></div>
+      <div class="city-label">دبي</div>
     </div>
     <div class="col-4">
-      <div class="analog-clock" data-zone="Europe/Paris"></div>
+      <div class="clock-circle" id="clock-paris"></div>
       <div class="city-label">باريس</div>
     </div>
     <div class="col-4">
-      <div class="analog-clock" data-zone="Australia/Sydney"></div>
+      <div class="clock-circle" id="clock-sydney"></div>
       <div class="city-label">سيدني</div>
     </div>
   </div>
 </div>
 
 <style>
-  .analog-clock {
-    position: relative;
-    width: 120px;
-    height: 120px;
+  .clock-circle {
+    width: 100px;
+    height: 100px;
     margin: 0 auto;
-    border: 5px solid #444;
+    border: 4px solid #aaa;
     border-radius: 50%;
-    background: radial-gradient(#000, #111);
-    box-shadow: inset 0 0 10px #000, 0 0 15px #0f0;
-  }
-
-  .analog-clock::before {
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    right: 5px;
-    bottom: 5px;
-    border-radius: 50%;
-    background: radial-gradient(ellipse at center, rgba(255,255,255,0.05), rgba(255,255,255,0));
-    z-index: 2;
-  }
-
-  .hand {
-    position: absolute;
-    bottom: 50%;
-    left: 50%;
-    transform-origin: bottom;
-    background: #0f0;
-    z-index: 1;
-    border-radius: 2px;
-  }
-
-  .hour {
-    width: 4px;
-    height: 30px;
-  }
-
-  .minute {
-    width: 3px;
-    height: 45px;
-  }
-
-  .second {
-    width: 2px;
-    height: 55px;
-    background: red;
-  }
-
-  .tick {
-    position: absolute;
-    width: 2px;
-    height: 8px;
-    background: #0f0;
-    left: 50%;
-    top: 2px;
-    transform-origin: center 60px;
-    opacity: 0.8;
+    background: #fff;
+    color: #000;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: monospace;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
   }
 
   .city-label {
-    margin-top: 8px;
+    margin-top: 10px;
+    font-size: 15px;
     color: #ccc;
-    font-size: 14px;
   }
 </style>
 
 <script>
-  function createAnalogClock(container, timeZone) {
-    const clock = document.createElement('div');
-    clock.className = 'analog-clock';
+  const clocks = [
+    { id: 'clock-ny', zone: 'America/New_York' },
+    { id: 'clock-london', zone: 'Europe/London' },
+    { id: 'clock-tokyo', zone: 'Asia/Tokyo' },
+    { id: 'clock-dubai', zone: 'Asia/Dubai' },
+    { id: 'clock-paris', zone: 'Europe/Paris' },
+    { id: 'clock-sydney', zone: 'Australia/Sydney' }
+  ];
 
-    const hour = document.createElement('div');
-    hour.className = 'hand hour';
-    const minute = document.createElement('div');
-    minute.className = 'hand minute';
-    const second = document.createElement('div');
-    second.className = 'hand second';
-
-    clock.appendChild(hour);
-    clock.appendChild(minute);
-    clock.appendChild(second);
-
-    // Add green ticks
-    for (let i = 0; i < 12; i++) {
-      const tick = document.createElement('div');
-      tick.className = 'tick';
-      tick.style.transform = `rotate(${i * 30}deg) translate(-50%, 0)`;
-      clock.appendChild(tick);
-    }
-
-    container.innerHTML = '';
-    container.appendChild(clock);
-
-    function updateClock() {
-      const now = new Date().toLocaleString("en-US", { timeZone });
-      const t = new Date(now);
-
-      const sec = t.getSeconds() * 6;
-      const min = t.getMinutes() * 6 + sec / 60;
-      const hr = (t.getHours() % 12) * 30 + min / 12;
-
-      hour.style.transform = `translateX(-50%) rotate(${hr}deg)`;
-      minute.style.transform = `translateX(-50%) rotate(${min}deg)`;
-      second.style.transform = `translateX(-50%) rotate(${sec}deg)`;
-    }
-
-    updateClock();
-    setInterval(updateClock, 1000);
+  function updateClocks() {
+    clocks.forEach(clock => {
+      const time = new Date().toLocaleTimeString('en-US', {
+        hour: '2-digit',
+        minute: '2-digit',
+        hour12: false,
+        timeZone: clock.zone
+      });
+      document.getElementById(clock.id).textContent = time;
+    });
   }
 
-  document.querySelectorAll('.analog-clock').forEach(clock => {
-    const zone = clock.getAttribute('data-zone');
-    createAnalogClock(clock, zone);
-  });
+  updateClocks();
+  setInterval(updateClocks, 60000);
 </script>
     <!-- الوجهات -->
     <div class="container destinations">
